vlib/v/checker/tests/generic_mut_struct_index_err.out
vlib/v/checker/tests/generic_mut_struct_index_err.vv:7:3: error: type `mut Heap[int]` does not support slicing
    5 | 
    6 | fn (mut h Heap[T]) insert(mut element T, pos int) {
    7 |     h[pos] = element
      |      ~~~~~
    8 | }
    9 |
vlib/v/checker/tests/generic_mut_struct_index_err.vv:7:11: error: cannot assign to `h[pos]`: expected `Heap[int]`, not `&int`
    5 | 
    6 | fn (mut h Heap[T]) insert(mut element T, pos int) {
    7 |     h[pos] = element
      |              ~~~~~~~
    8 | }
    9 |
